infra/vpc.internet-gtw.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "dvn-internet-gateway"
  }
}
